# rustler

./: Cargo.toml  LICENCE  README.md
src/: app_state.rs  config.rs  error.rs  main.rs
src/clients/: clients.rs  mod.rs  postgres_client.rs  redis_client.rs  s3_client.rs
src/controllers/: file_controller.rs  health_controller.rs  mod.rs
src/routes/: file_routes.rs  health_routes.rs  mod.rs
src/services/: file_service.rs  health_service.rs  mod.rs
src/utils/: file_utils.rs
